--- a/SignalRSample/Views/Home/Index.cshtml
+++ b/SignalRSample/Views/Home/Index.cshtml
@@ -11,6 +11,14 @@
             <span id="totalViewsCounter"></span>
         </div>
     </div>
+    <div class="row">
+            <div class="col-3">
+                Total connected users: 
+            </div>
+            <div class="col-4">
+                <span id="totalConnectedUsersCount"></span>
+            </div>
+        </div>
 </div>
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
